--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
-  "homepage": "https://shengpingwu.github.io//iptv-player",
+  "homepage": "https://shengpingwu.github.io/iptv-player",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "clean": "gh-pages-clean"
   },
   "eslintConfig": {
     "extends": [
